--- a/index.html
+++ b/index.html
@@ -39,10 +39,11 @@
         </div>
 
         <div class="serv_text">
-            <h5>IT'S AN AMAZING SERVICE</h5>
-            <h2>Welcome to the medical services you can trust</h2>
+            <h5>IT'S AN AMAZING SERVICE !</h5>
+            <h2>Welcome To The Medical
+                <br />Services You Can Trust</h2>
             <h3>
-                The quality of our services and professionalism of our staff are the reason for Medic's success
+                The quality of our services and professionalism of <br /> our staff are the reason for Medic's success
             </h3>
             <button class="button">Read more</button>
         </div>
