hompage woman added the page

--- a/index.html
+++ b/index.html
@@ -38,16 +38,35 @@
             </div>
         </div>
 
-        <div class="serv_text">
-            <h5>IT'S AN AMAZING SERVICE !</h5>
-            <h2>Welcome To The Medical
-                <br />Services You Can Trust</h2>
-            <h3>
-                The quality of our services and professionalism of <br /> our staff are the reason for Medic's success
-            </h3>
-            <button class="button">Read more</button>
-        </div>
+        <section class="banner_">
+
+            <div class="serv_text">
+                <h5>IT'S AN AMAZING SERVICE !</h5>
+                <h2>Welcome To The Medical <br />Services You Can Trust</h2>
+                <h3>
+                    The quality of our services and professionalism of <br /> our staff are the reason for Medic's success
+                </h3>
+                <button class="button">Read more</button>
+            </div>
+            <div class="homepageWoman">
+                <img class="imagebanner" src="img/Homepage Woman@2x.png" />
+            </div>
+
+
+        </section>
+
     </div>
+    <Section class="service_box">
+        <div>
+
+            EMERGENCY SERVICES +234-810-245-8866 You can call us for emergency and make an appointment out of clinic
+            <button class="button"> Call Now </button>
+        </div>
+        <div>
+
+        </div>
+        <div></div>
+    </Section>
 </body>
 
 </html>
