woman image overlay and service_box style done

--- a/index.html
+++ b/index.html
@@ -39,7 +39,6 @@
         </div>
 
         <section class="banner_">
-
             <div class="serv_text">
                 <h5>IT'S AN AMAZING SERVICE !</h5>
                 <h2>Welcome To The Medical <br />Services You Can Trust</h2>
@@ -49,24 +48,23 @@
                 <button class="button">Read more</button>
             </div>
             <div class="homepageWoman">
-                <img class="imagebanner" src="img/Homepage Woman@2x.png" />
+                <img class="imagebanner" src="img/Homepage Woman@3x.png" />
             </div>
-
-
         </section>
-
     </div>
-    <Section class="service_box">
+    <section class="service_box">
         <div>
-
-            EMERGENCY SERVICES +234-810-245-8866 You can call us for emergency and make an appointment out of clinic
-            <button class="button"> Call Now </button>
+            <img src="img/Phone Icon.svg " /> EMERGENCY SERVICES +234-810-245-8866 You can call us for emergency and make an appointment out of clinic
+            <button class="button">Call Now</button>
         </div>
         <div>
-
+            <img src="img/Appointment icon.svg" />
+            <button class="button">Call Now</button>
         </div>
-        <div></div>
-    </Section>
+        <div>
+            <img src="img/Time icon.svg " /> OPENING HOURS Mon-Fri 8:00 - 20:00 Saturday 9:00 - 18:00 Sunday 10:00 - 15:00
+        </div>
+    </section>
 </body>
 
 </html>
